--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/navigation_schedule"
+        android:icon="@drawable/ic_bottom_nav_schedule"
+        android:title="@string/bottom_nav_schedule" />
+
+    <item
+        android:id="@+id/navigation_materials"
+        android:icon="@drawable/ic_bottom_nav_materials"
+        android:title="@string/bottom_nav_materials" />
+
+    <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/ic_bottom_nav_home"
+        android:title="@string/bottom_nav_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_groups"
+        android:icon="@drawable/ic_bottom_nav_groups"
+        android:title="@string/bottom_nav_groups" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_reminders"
+        android:icon="@drawable/ic_bottom_nav_reminders"
+        android:title="@string/bottom_nav_reminders" />
 
 </menu>
