--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -8,42 +8,45 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/action_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="@string/settings_title"
-        app:showAsAction="ifRoom">
+        android:id="@+id/action_mode_terang"
+        android:icon="@drawable/ic_mode_terang"
+        android:title="@string/mode_terang"
+        app:showAsAction="never"
+        app:iconTint="?attr/colorOnSurface" />
+
+    <item
+        android:id="@+id/action_language"
+        android:icon="@drawable/ic_language"
+        android:title="@string/menu_bahasa"
+        app:showAsAction="never"
+        app:iconTint="?attr/colorOnSurface">
         <menu>
-            <item
-                android:id="@+id/action_toggle_theme"
-                android:icon="@drawable/ic_dark_mode"
-                android:title="@string/theme_toggle_menu_item_dark" />
-            <item
-                android:id="@+id/action_language"
-                android:icon="@drawable/ic_translate_light"
-                android:title="@string/language_title">
-                <menu>
-                    <group android:checkableBehavior="single">
-                        <item
-                            android:id="@+id/action_language_english"
-                            android:title="English" />
-                        <item
-                            android:id="@+id/action_language_indonesian"
-                            android:title="Bahasa Indonesia" />
-                        <item
-                            android:id="@+id/action_language_chinese"
-                            android:title="中文 (Chinese)" />
-                    </group>
-                </menu>
-            </item>
-            <item
-                android:id="@+id/action_export_data"
-                android:icon="@drawable/ic_export"
-                android:title="@string/export_data_title" />
-            <item
-                android:id="@+id/action_import_data"
-                android:icon="@drawable/ic_import"
-                android:title="@string/import_data_title" />
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/action_language_english"
+                    android:title="@string/language_english" />
+                <item
+                    android:id="@+id/action_language_indonesian"
+                    android:title="@string/language_indonesian" />
+                <item
+                    android:id="@+id/action_language_chinese"
+                    android:title="@string/language_chinese" />
+            </group>
         </menu>
     </item>
+
+    <item
+        android:id="@+id/action_export_data"
+        android:icon="@drawable/ic_export_data"
+        android:title="@string/menu_ekspor_data"
+        app:showAsAction="never"
+        app:iconTint="?attr/colorOnSurface" />
+
+    <item
+        android:id="@+id/action_import_data"
+        android:icon="@drawable/ic_import_data"
+        android:title="@string/menu_impor_data"
+        app:showAsAction="never"
+        app:iconTint="?attr/colorOnSurface" />
 
 </menu> 
